tests/ui/option_string_ref.stderr
error: unsupported element type of Option
 --> tests/ui/option_string_ref.rs:4:19
  |
4 |         fn f() -> Option<&'static String>;
  |                   ^^^^^^^^^^^^^^^^^^^^^^^
